--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-elements": "^3.4.2",
+    "react-native-root-toast": "^3.2.1",
     "react-native-safe-area-context": "3.3.0",
     "react-native-screens": "3.5.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.4",
     "yarn": "^1.22.11"
   },
   "devDependencies": {
